# go2-social-nav

./: .gitignore  README.md  docker-compose.yml  run.sh
docker/: Dockerfile  entrypoint.sh
docs/: deployment.md
ros2_ws/results/: benchmark.csv  comparison.md  hunav_eval.csv  hunav_eval_beh_1.csv  hunav_eval_beh_1_steps_dwa_crossing_0.csv  hunav_eval_beh_1_steps_dwa_group_0.csv  hunav_eval_beh_1_steps_dwa_head_on_0.csv  hunav_eval_beh_1_steps_stub_crossing_0.csv  hunav_eval_beh_1_steps_stub_group_0.csv  hunav_eval_beh_1_steps_stub_head_on_0.csv  hunav_eval_beh_1_steps_teb_crossing_0.csv  hunav_eval_beh_1_steps_teb_group_0.csv  hunav_eval_beh_1_steps_teb_head_on_0.csv  hunav_eval_steps_dwa_crossing_0.csv  hunav_eval_steps_dwa_group_0.csv  hunav_eval_steps_dwa_head_on_0.csv  hunav_eval_steps_stub_crossing_0.csv  hunav_eval_steps_stub_group_0.csv  hunav_eval_steps_stub_head_on_0.csv  hunav_eval_steps_teb_crossing_0.csv  hunav_eval_steps_teb_group_0.csv  hunav_eval_steps_teb_head_on_0.csv
ros2_ws/results/runs/: dwa_crossing_run0.json  dwa_group_run0.json  dwa_head_on_run0.json  stub_crossing_run0.json  stub_group_run0.json  stub_head_on_run0.json  teb_crossing_run0.json  teb_group_run0.json  teb_head_on_run0.json
ros2_ws/results/trajectories/: dwa_crossing_run0_traj.csv  dwa_group_run0_traj.csv  dwa_head_on_run0_traj.csv  stub_crossing_run0_traj.csv  stub_group_run0_traj.csv  stub_head_on_run0_traj.csv  teb_crossing_run0_traj.csv  teb_group_run0_traj.csv  teb_head_on_run0_traj.csv
ros2_ws/src/go2_bench/: CMakeLists.txt  package.xml
ros2_ws/src/go2_bench/config/: metrics.yaml  nav2_dwa.yaml  nav2_teb.yaml
ros2_ws/src/go2_bench/launch/: benchmark.launch.py
ros2_ws/src/go2_bench/scripts/: bench_runner.py  compare.py  people_to_cloud.py
ros2_ws/src/go2_brain/: CMakeLists.txt  package.xml
ros2_ws/src/go2_brain/config/: stub_brain.yaml
ros2_ws/src/go2_brain/launch/: cafe_go2_brain.launch.py
ros2_ws/src/go2_brain/scripts/: stub_brain.py
ros2_ws/src/go2_description/: CMakeLists.txt  package.xml
ros2_ws/src/go2_description/launch/: spawn_go2.launch.py  spawn_go2_champ.launch.py
ros2_ws/src/go2_description/rviz/: champ_8a.rviz
ros2_ws/src/go2_description/scripts/: lock_legs.py
ros2_ws/src/go2_description/urdf/: go2.urdf  go2.xacro
ros2_ws/src/go2_description/worlds/: empty.world
ros2_ws/src/go2_description/xacro/: velodyne.xacro
ros2_ws/src/go2_gesture/: CMakeLists.txt  package.xml
ros2_ws/src/go2_gesture/config/: gesture_teleop.yaml
ros2_ws/src/go2_gesture/launch/: gesture_teleop.launch.py
ros2_ws/src/go2_gesture/model/keypoint_classifier/: keypoint_classifier.tflite  keypoint_classifier_label.csv
ros2_ws/src/go2_gesture/scripts/: gesture_teleop.py
ros2_ws/src/go2_hunav/: CMakeLists.txt  package.xml
ros2_ws/src/go2_hunav/launch/: cafe_go2.launch.py  cafe_isolated.launch.py
ros2_ws/src/go2_hunav/models/: placeholder_robot.sdf
ros2_ws/src/go2_hunav/rviz/: cafe.rviz
ros2_ws/src/go2_hunav/scenarios/: agents_bench_crossing.yaml  agents_bench_group.yaml  agents_bench_head_on.yaml  agents_cafe_regular.yaml
ros2_ws/src/go2_hunav/scripts/: people_markers.py
