<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_bench</name>
  <version>0.1.0</version>
  <description>
    Phase 6 benchmark harness. Runs ANY /cmd_vel-producing brain (stub_brain,
    Nav2 DWA/TEB, the future IT2-FLS) through a fixed set of repeatable pedestrian
    scenarios and logs identical metrics, so the social-nav comparison is valid.
    Reuses HuNavSim's hunav_evaluator for the social/proxemic metrics and adds an
    orchestrator/logger that owns run start/stop and computes trajectory jerk the
    SAME way for every controller.
  </description>
  <maintainer email="imanchanabandara@gmail.com">imanchana</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>hunav_msgs</exec_depend>
  <exec_depend>hunav_evaluator</exec_depend>
  <exec_depend>go2_hunav</exec_depend>
  <exec_depend>go2_brain</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
