<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_hunav</name>
  <version>0.1.0</version>
  <description>
    Our integration glue for HuNavSim. Phase 3 provides a minimal, robot-less
    cafe launch that reuses the upstream HuNavSim nodes/worlds/scenarios
    (no PMB2 / nav2). Later phases add the Go2 as the robot.
  </description>
  <maintainer email="imanchanabandara@gmail.com">imanchana</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hunav_agent_manager</exec_depend>
  <exec_depend>hunav_gazebo_wrapper</exec_depend>
  <exec_depend>go2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
